--- a/app/nginx.tmpl
+++ b/app/nginx.tmpl
@@ -367,7 +367,7 @@ server {
     {{ end }}
 
     {{ if $is_azuracast }}
-    include /etc/nginx/vhost.d/azuracast.conf;
+    include /etc/nginx/azuracast.conf;
     {{ end }}
 
     {{ if (exists (printf "/etc/nginx/vhost.d/%s" $host)) }}
