Apply x_forwarded_for policy from AzuraCast nginx server.

--- a/app/nginx.tmpl
+++ b/app/nginx.tmpl
@@ -68,6 +68,11 @@
     {{ end }}
 {{ end }}
 
+map $http_x_forwarded_for $proxy_x_forwarded_for {
+  default $http_x_forwarded_for;
+  ''      $remote_addr;
+}
+
 # If we receive X-Forwarded-Proto, pass it through; otherwise, pass along the
 # scheme used to connect to this server
 map $http_x_forwarded_proto $proxy_x_forwarded_proto {
@@ -130,7 +135,7 @@ proxy_set_header Upgrade $http_upgrade;
 proxy_set_header Connection $proxy_connection;
 proxy_set_header Origin $http_origin;
 proxy_set_header X-Real-IP $remote_addr;
-proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+proxy_set_header X-Forwarded-For $proxy_x_forwarded_for;
 proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
 proxy_set_header X-Forwarded-Ssl $proxy_x_forwarded_ssl;
 proxy_set_header X-Forwarded-Port $proxy_x_forwarded_port;
