--- a/app/nginx.tmpl
+++ b/app/nginx.tmpl
@@ -130,6 +130,11 @@ include /etc/nginx/proxy.conf;
 # HTTP 1.1 support
 proxy_http_version 1.1;
 proxy_buffering off;
+
+{{ if $.Env.NGINX_TIMEOUT }}
+proxy_read_timeout {{ $.Env.NGINX_TIMEOUT }};
+{{ end }}
+
 proxy_set_header Host $http_host;
 proxy_set_header Upgrade $http_upgrade;
 proxy_set_header Connection $proxy_connection;
